fixed blurry search

--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -87,10 +87,7 @@ outline: 0;
 }
 
 .select2-selection {
-  border-right: 0;
-  border-left: 1px solid LightGray !important;
-  border-top: 1px solid LightGray !important;
-  border-bottom: 1px solid LightGray !important;
+  border: 1px solid LightGray !important;
 }
 
 .select2-results__options {
